# pypi-index

./: .gitignore  README.md  setup.cfg  shell.nix
nix/: eval_dist.py  eval_setup.py  setup.nix
pypi/: index.py
