[metadata]
name = pypi-index
version = attr:pypi.__version__
description = Generate a metadata index for python packages.
url = https://github.com/LnL7/pypi-index
author = Daiderd Jordan
author_email = daiderd@gmail.com
license = MIT
platform = Any

[options]
zip_safe = False
packages = find:
install_requires =
    distlib
    requests
    argparse; python_version < '2.7'

[options.entry_points]
console_scripts =
    pypi-index = pypi.index:main

[easy_install]
allow_hosts = None
